<resources>
    <string name="app_name" translatable="false">BeeWare</string>

    <!-- Preferences -->
    <string name="subscriptions" translatable="false">subscriptions</string>
    <string name="sidst_opdateret" translatable="false">Sidst Opdateret</string>

    <!-- Reserved for activity designs. Ignore it. -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="bistade" translatable="false">Bistade</string>
    <string name="stade1" translatable="false">Stade1</string>
    <string name="hive" translatable="false">Hive</string>
    <string name="leftAxisLegend" translatable="false">Kg</string>
    <string name="rightAxisLegend" translatable="false">C°</string>
    <string name="channel_name" translatable="false">Channel</string>
    <string name="channel_description" translatable="false">Description</string>
    <string name="textPlaceholder" translatable="false">Placeholder</string>
    <string name="datePlaceholder" translatable="false">00-00-0000</string>

    <!-- At errors -->
    <string name="NoInternetConnection">No internet connection.</string>
    <string name="ClassError">: class error.</string>
    <string name="FailedToGetLatestData">Could not get the latest data for: </string>
    <string name="FailedToGetPastData">Could not get the past data for: </string>
    <string name="FailedToGetData">Could not get the data for: </string>

    <!-- Period prompts on graphs -->
    <string name="ViewPeriod">VIEW PERIOD</string>
    <string name="ResetButton">RESET</string>
    <string name="Advanced">Advanced</string>
    <string name="Basic">Basic</string>
    <string name="NumberOfDays">Number of days:</string>
    <string-array name="time_period">
        <item>All</item>
        <item>1 week</item>
        <item>1 month</item>
        <item>3 months</item>
        <item>6 months</item>
        <item>A year</item>
    </string-array>

    <!-- Overview -->
    <string name="ProblematicHivesTitle">Problematic hives!</string>
    <string name="ProblematicHivesBody">Inactive hives might cause the application to crash. Subscribing to these beehives is not recommended.</string>
    <string name="GoBack">Go back</string>
    <string name="Continue">Continue</string>
    <string name="YouHaveNotSubscribedToAnyHives">You have not subscribed to any hives.\nClick the edit button to subscribe to a hive.</string>
    <string name="UnableToFetchNewestData">Unable to fetch the newest data.  Check your internet connection.</string>
    <string name="ErrorDataCouldNotBeFetched">Error. Data could not be fetched.</string>
    <string name="WeightIconDescription">Icon of a weight</string>
    <string name="TempIconDescription">Icon of a thermometer</string>
    <string name="SunligtIconDescription">Icon of a sun</string>

    <!-- Graph -->
    <string name="Weight">Weight</string>
    <string name="Temp">Temperature</string>
    <string name="Sunlight">Sunlight</string>
    <string name="Humidity">Humidity</string>
    <string name="CouldNotLoadHiveData">Could not load hive data.</string>
    <string name="ThisDataIsStillDownloading">This data is still downloading…</string>
    <string name="DownloadingIsFinished">Download is finished.</string>
    <string name="LackingData">Parts of the period may not have any data.</string>
    <string name="FailedToGetHive">Could not get hive data.</string>
    <string name="AvailableFromDate">Data available from: </string>

    <!-- Subscribe menu -->
    <string name="active">Active</string>
    <string name="search">Search</string>
    <string name="inactive">Inactive</string>
<!--    <string name="subs">Subscriptions</string>-->
    <string name="subs">My hives</string>
    <string name="NoSubscriptions">You have no subscriptions.</string>
    <string name="EmptyList">The list is empty.</string>

    <!-- Graph xml -->
    <string name="noChartDataText">No data available.</string>
    <string name="temperature">Temperature</string>
    <string name="luminocity">Luminocity</string>
    <string name="humidity">Humidity</string>
    <string name="weight">Weight</string>
    <string name="from_date">From date</string>
    <string name="period_label">Period back</string>
    <string name="select_data_period_button">Select data period</string>
    <string name="SettingsButtonDescription">Button for settings</string>

    <!-- Configuration xml -->
<!--    <string name="configTitle">Configuring:</string>-->
<!--    <string name="FromGraphConfigTitle">Configure the new hive:</string>-->
    <string name="configInfo">The threshold values indicate at which value the Hive\'s icon on the overview will change from green to yellow.</string>
<!--    <string name="FromGraphConfigInfo">This is a newly subscribed hive that is not yet configured.\nThe numbers below indicate at which value the Hive\'s icon on the overview will change from green to yellow.\nThis can always be adjusted under settings in the bottom left edit menu.</string>-->
    <string name="configTopicThresh">Threshold values</string>
    <string name="ConfigWeight">Weight (kg)</string>
    <string name="ConfigTemp">Temperature (\u2103) </string>
    <string name="ConfigSave">SAVE</string>
    <string name="ConfigCancel">CANCEL</string>
    <string name="no_graphs_selected">No graphs selected.</string>
    <string name="loading">Loading…</string>

</resources>