<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="20dp"
    tools:context=".presentation.ConfigurationFragment">

    <!--    <TextView-->
    <!--        android:id="@+id/config_tv"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="25dp"-->
    <!--        android:layout_marginTop="15dp"-->
    <!--        android:text="@string/configTitle"-->
    <!--        android:textSize="18sp"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <TextView
        android:id="@+id/hiveNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/configTopicThresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/configTopicThresh"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/hiveNameTV"
        app:layout_constraintTop_toBottomOf="@+id/hiveNameTV" />

    <TextView
        android:id="@+id/weightIndicatorTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/ConfigWeight"
        app:layout_constraintStart_toStartOf="@+id/hiveNameTV"
        app:layout_constraintTop_toBottomOf="@+id/configTopicThresh" />

<!--    <EditText-->
<!--        android:id="@+id/weightIndicatorNum"-->
<!--        android:layout_width="200dp"-->
<!--        android:layout_height="40dp"-->
<!--        android:background="@drawable/field_borderbox"-->
<!--        android:ems="10"-->
<!--        android:hint="@string/ConfigWeight"-->
<!--        android:importantForAutofill="no"-->
<!--        android:inputType="number"-->
<!--        android:paddingStart="10dp"-->
<!--        android:paddingEnd="10dp"-->
<!--        app:layout_constraintStart_toStartOf="@+id/weightIndicatorTV"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/weightIndicatorTV" />-->

    <TextView
        android:id="@+id/tempIndicatorTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:text="@string/ConfigTemp"
        app:layout_constraintTop_toBottomOf="@+id/configTopicThresh"
        app:layout_constraintStart_toEndOf="@+id/weightIndicatorTV" />

<!--    <EditText-->
<!--        android:id="@+id/tempIndicatorNumber"-->
<!--        android:layout_width="200dp"-->
<!--        android:layout_height="40dp"-->
<!--        android:layout_marginTop="36dp"-->
<!--        android:background="@drawable/field_borderbox"-->
<!--        android:hint="@string/ConfigTemp"-->
<!--        android:importantForAutofill="no"-->
<!--        android:inputType="number"-->
<!--        android:paddingStart="10dp"-->
<!--        android:paddingEnd="10dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/weightNumberPicker" />-->

    <TextView
        android:id="@+id/config_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:padding="15dp"
        android:text="@string/ConfigSave"
        android:textColor="@color/app_theme"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weightNumberPicker"
        app:layout_constraintVertical_bias="0.0" />
    <TextView
        android:id="@+id/config_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:padding="15dp"
        android:text="@string/ConfigCancel"
        android:textColor="@color/app_theme"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weightNumberPicker"
        app:layout_constraintVertical_bias="0.0" />
    <ImageView
        android:id="@+id/explainThresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="4dp"
        android:src="@drawable/ic_help"
        app:layout_constraintStart_toEndOf="@+id/configTopicThresh"
        app:layout_constraintTop_toBottomOf="@+id/hiveNameTV" />

<!--    android:textColor="#2196F3"-->
<!--    android:textSize="18sp"-->
<!--    android:textStyle="bold"-->
    <NumberPicker
        android:id="@+id/weightNumberPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/weightIndicatorTV"
        app:layout_constraintTop_toBottomOf="@+id/weightIndicatorTV" ></NumberPicker>

    <NumberPicker
        android:id="@+id/tempNumberPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tempIndicatorTV"
        app:layout_constraintTop_toBottomOf="@+id/tempIndicatorTV" ></NumberPicker>

<!--    android:paddingStart="10dp"-->
<!--    android:paddingEnd="10dp"-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/progressBarLayoutConfigurationFrag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/progressBarConfigurationFrag"
            style="?android:attr/progressBarStyle"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/custom_progressbar"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>