<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00FFFFFF"
    android:foreground="?attr/selectableItemBackgroundBorderless">

    <ImageView
        android:id="@+id/album"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/bistade"
        android:src="@drawable/img_beehive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/weightIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/btn_hexagon"
        android:contentDescription="@string/WeightIconDescription"
        android:paddingBottom="8dp"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="@+id/album"
        app:layout_constraintEnd_toEndOf="@+id/album"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="@+id/album"
        app:layout_constraintTop_toTopOf="@+id/album"
        app:layout_constraintVertical_bias="0.145"
        app:srcCompat="@drawable/ic_weight" />

    <TextView
        android:id="@+id/hive_currWeightTV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="10dp"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="@string/textPlaceholder"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/weightIcon"
        app:layout_constraintEnd_toEndOf="@+id/album"
        app:layout_constraintStart_toEndOf="@+id/weightIcon"
        app:layout_constraintTop_toTopOf="@+id/weightIcon" />

    <ImageView
        android:id="@+id/tempIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/btn_hexagon"
        android:contentDescription="@string/TempIconDescription"
        android:scaleType="center"
        app:layout_constraintBottom_toTopOf="@+id/illumIcon"
        app:layout_constraintEnd_toEndOf="@+id/weightIcon"
        app:layout_constraintStart_toStartOf="@+id/weightIcon"
        app:layout_constraintTop_toBottomOf="@+id/weightIcon"
        app:srcCompat="@drawable/ic_temperature" />

    <TextView
        android:id="@+id/tempInTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/tempIcon"
        app:layout_constraintEnd_toEndOf="@+id/tempIcon"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tempIcon"
        app:layout_constraintTop_toTopOf="@+id/tempIcon"
        app:layout_constraintVertical_bias="0.75" />

    <ImageView
        android:id="@+id/illumIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/btn_hexagon"
        android:contentDescription="@string/SunligtIconDescription"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="@+id/album"
        app:layout_constraintEnd_toEndOf="@+id/tempIcon"
        app:layout_constraintStart_toStartOf="@+id/tempIcon"
        app:layout_constraintTop_toTopOf="@+id/album"
        app:layout_constraintVertical_bias="0.94"
        app:srcCompat="@drawable/ic_sunlight" />

    <TextView
        android:id="@+id/hive_currIllumTV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="@string/textPlaceholder"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/illumIcon"
        app:layout_constraintEnd_toEndOf="@+id/album"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/hive_currTempTV"
        app:layout_constraintTop_toTopOf="@+id/illumIcon"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/hive_currTempTV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="@string/textPlaceholder"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tempIcon"
        app:layout_constraintEnd_toEndOf="@+id/album"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/hive_currWeightTV"
        app:layout_constraintTop_toTopOf="@+id/tempIcon"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/album_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:gravity="bottom|center_horizontal"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/bistade"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/album"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/last_updated_tv"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:gravity="center_horizontal"
        android:maxLines="2"
        android:text="@string/textPlaceholder"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/album_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/album_title"
        app:layout_constraintTop_toBottomOf="@+id/album_title" />

</androidx.constraintlayout.widget.ConstraintLayout>