<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newTimeFragment"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <!--    <androidx.constraintlayout.widget.ConstraintLayout-->
<!--        android:id="@+id/constraintLayout2"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="30dp"-->
<!--        android:layout_marginStart="15dp"-->
<!--        android:layout_marginBottom="10dp"-->
<!--        android:background="@drawable/spinner_borderbox"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toEndOf="@+id/newTime_from_text"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/newTime_settings"-->
<!--        app:layout_constraintVertical_bias="0.0">-->

<!--        <Spinner-->
<!--            android:id="@+id/newTime_spinner"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="0dp"-->
<!--            android:backgroundTint="@color/app_theme"-->
<!--            android:entries="@array/time_period"-->
<!--            android:spinnerMode="dropdown"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent" />-->

<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->

<!--    <NumberPicker-->
<!--        android:id="@+id/periodPicker"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="8dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"></NumberPicker>-->

<!--    <TextView-->
<!--        android:id="@+id/newTime_from_text"-->
<!--        android:layout_width="150dp"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:background="@drawable/field_borderbox"-->
<!--        android:drawableEnd="@drawable/ic_calendar"-->
<!--        android:drawableTint="@color/app_theme"-->
<!--        android:foreground="?attr/selectableItemBackgroundBorderless"-->
<!--        android:gravity="center_vertical"-->
<!--        android:paddingStart="10dp"-->
<!--        android:paddingEnd="10dp"-->
<!--        android:text="@string/datePlaceholder"-->
<!--        android:textSize="18sp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        android:visibility="gone"/>-->

<!--    <TextView-->
<!--        android:id="@+id/newTime_to_text"-->
<!--        android:layout_width="150dp"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_marginStart="15dp"-->
<!--        android:layout_marginEnd="88dp"-->
<!--        android:background="@drawable/field_borderbox_greyed"-->
<!--        android:drawableEnd="@drawable/ic_calendar"-->
<!--        android:drawableTint="#26000000"-->
<!--        android:gravity="center_vertical"-->
<!--        android:paddingStart="10dp"-->
<!--        android:paddingEnd="10dp"-->
<!--        android:text="@string/datePlaceholder"-->
<!--        android:textColor="#26000000"-->
<!--        android:textSize="18sp"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toEndOf="@+id/constraintLayout2"-->
<!--        app:layout_constraintTop_toTopOf="@+id/constraintLayout2"-->
<!--        android:visibility="gone"/>-->

    <FrameLayout
        android:id="@+id/newTime_calendar_frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        >
    </FrameLayout>

<!--    <ImageView-->
<!--        android:id="@+id/newTime_settings"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="5dp"-->
<!--        android:layout_marginEnd="5dp"-->
<!--        android:contentDescription="@string/SettingsButtonDescription"-->
<!--        android:foreground="?attr/selectableItemBackgroundBorderless"-->
<!--        android:padding="10dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:srcCompat="@drawable/ic_settings" />-->


    <TextView
        android:id="@+id/toBasicButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:padding="15dp"
        android:text="@string/Basic"
        android:textColor="@color/app_theme"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

<!--    <TextView-->
<!--        android:id="@+id/newTimeResetButton"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="40dp"-->
<!--        android:foreground="?attr/selectableItemBackgroundBorderless"-->
<!--        android:gravity="center"-->
<!--        android:padding="10dp"-->
<!--        android:text="@string/ResetButton"-->
<!--        android:textColor="@color/app_theme"-->
<!--        android:textSize="16sp"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/newTime_from_text"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="@+id/newTime_from_text"-->
<!--        app:layout_constraintVertical_bias="1.0"-->
<!--        android:visibility="gone"/>-->

    <TextView
        android:id="@+id/newTime_viewperiod_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="15dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:padding="0dp"
        android:text="@string/ViewPeriod"
        android:textColor="@color/app_theme"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginBottom="15sp"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@id/newTime_calendar_frame"
        app:layout_constraintBottom_toBottomOf="parent" />

<!--    <EditText-->
<!--        android:id="@+id/daysEditText"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="0dp"-->
<!--        android:layout_marginBottom="34dp"-->
<!--        android:ems="3"-->
<!--        android:hint="Days"-->
<!--        android:inputType="number"-->
<!--        android:maxLength="3"-->
<!--        app:layout_constraintStart_toEndOf="@id/newTime_calendar_frame"-->
<!--        app:layout_constraintBottom_toTopOf="@id/newTime_viewperiod_btn"-->
<!--        android:visibility="invisible"/>-->

    <NumberPicker
        android:id="@+id/dayPicker100"
        android:layout_width="25dp"
        android:layout_height="125dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/insertDaysTv"
        app:layout_constraintStart_toEndOf="@id/newTime_calendar_frame" />

    <NumberPicker
        android:id="@+id/dayPicker10"
        android:layout_width="25dp"
        android:layout_height="125dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/insertDaysTv"
        app:layout_constraintStart_toEndOf="@id/dayPicker100" />

    <NumberPicker
        android:id="@+id/dayPicker1"
        android:layout_width="25dp"
        android:layout_height="125dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/insertDaysTv"
        app:layout_constraintStart_toEndOf="@id/dayPicker10" />

    <TextView
        android:id="@+id/insertDaysTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NumberOfDays"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@+id/toBasicButton"
        app:layout_constraintStart_toEndOf="@+id/newTime_calendar_frame" />

</androidx.constraintlayout.widget.ConstraintLayout>